# opensbi

./: .editorconfig  .gitignore  .gitmodules  BUILD.bazel  CONTRIBUTORS.md  COPYING.BSD  Kconfig  LICENSE  Makefile  PafOS.md  README.md  ThirdPartyNotices.md  WORKSPACE.bazel  cross_build.sh  make_libsbi.cmd  make_libsbi.sh
.github/workflows/: repo-lockdown.yml
blob/: fw_common.S  fw_common.ldS  fw_jump.S  fw_jump.elf.ldS  fw_payload.S  fw_payload.elf.ldS  objects.mk
docs/: contributing.md  domain_support.md  doxygen.cfg  library_usage.md  opensbi_config.md  platform_guide.md  platform_requirements.md  pmu_support.md  sbom.cdx.json  writing_tests.md
docs/blob/: fw_jump.md  fw_payload.md
docs/firmware/: fw.md  fw_dynamic.md  fw_jump.md  fw_payload.md  payload_linux.md  payload_uboot.md
docs/platform/: andes-ae350.md  ariane-fpga.md  fpga-ariane.md  fpga-openpiton.md  generic.md  nuclei_ux600.md  platform.md  qemu_sifive_u.md  qemu_virt.md  shakti_cclass.md  sifive_fu540.md  spike.md  thead-c910.md  thead-c9xx.md  tt-atlantis.md
firmware/: Kconfig  external_deps.mk  fw_base.S  fw_base.ldS  fw_base.ldS.orig  fw_common.S  fw_common.ldS  fw_dynamic.S  fw_dynamic.elf.ldS  fw_jump.S  fw_jump.elf.ldS  fw_payload.S  fw_payload.elf.ldS  objects.mk  sanctum_params_mod.lds
firmware/payloads/: dummy.elf.ldS  dummy_head.S  dummy_main.c  objects.mk  test.elf.ldS  test_head.S  test_main.c
include/: BUILD.bazel
include/common/: sbi_circular_queue.h
include/sbi/: fw_dynamic.h  riscv_asm.h  riscv_atomic.h  riscv_barrier.h  riscv_dbtr.h  riscv_elf.h  riscv_encoding.h  riscv_fp.h  riscv_io.h  riscv_locks.h  riscv_unpriv.h  (+55 more)
lib/: objects.mk  riscv_asm.c  riscv_atomic.c  riscv_hardfp.S  riscv_locks.c  riscv_unpriv.c  sbi_console.c  sbi_ecall.c  sbi_emulate_csr.c  sbi_fdt.c  sbi_fifo.c  sbi_hart.c  sbi_illegal_insn.c  sbi_init.c  sbi_ipi.c  sbi_misaligned_ldst.c  sbi_scratch.c  sbi_system.c  sbi_timer.c  sbi_trap.c
platform/: objects.mk
scripts/: carray.sh  create-binary-archive.sh  d2c.sh
tests/: test_invariant_hfp.c
(+523 files in other folders)
