load("@rules_foreign_cc//foreign_cc:defs.bzl", "make")

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = [ "//visibility:public", ],
)

exports_files(glob(["**"]))
exports_files(["firmware"])

make(
  name = "libsbi",
  targets = ["all install V=1 I=$$INSTALLDIR$$"],
  out_lib_dir = "lib64/lp64",
  lib_source = ":all_files",
  build_data = [
    "@muntjac_toolchain//:toolchain",
  ],
  copts = [
    "-Ithird_party/opensbi/firmware",
  ],
  visibility = [ "//visibility:public" ],
)
